--- a/productPage.html
+++ b/productPage.html
@@ -14,12 +14,12 @@
         <ul>
           <li>
             <a href="index.html" class="homepagebutton">
-              <img src="./assets/images/GameHub_Logo.png" alt="GameHub Logo"id="Gamehub_Logo"/>
+              <img src="/assets/images/GameHub_Logo.png" alt="GameHub Logo"id="Gamehub_Logo"/>
             </a>
           </li>
           <li>
             <a href="checkout.html" class="shoppingcart">
-              <img src="./assets/images/Basket.png" alt="Basket" id="Basket"/>
+              <img src="/assets/images/Basket.png" alt="Basket" id="Basket"/>
             </a>
           </li>
         </ul>
@@ -53,17 +53,17 @@
             </li>
             <li>
               <a href="https://twitter.com" class="buttons" id="twittericon">
-                <img src="./assets/images/icons8-twitter-96.png">
+                <img src="/assets/images/icons8-twitter-96.png">
               </a>
             </li>
             <li>
               <a href="https://instagram.com" class="buttons" id="instagram icon">
-                <img src="./assets/images/icons8-instagram-96.png">
+                <img src="/assets/images/icons8-instagram-96.png">
               </a>
             </li>
             <li>
               <a href="https://facebook.com" class="buttons" id="facebookicon">
-                <img src="./assets/images/icons8-facebook-96.png">
+                <img src="/assets/images/icons8-facebook-96.png">
               </a>
             </li>
           </ul>
